--- a/CSS/general.css
+++ b/CSS/general.css
@@ -15,8 +15,17 @@ html{
 }
 
 body{
-    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 2rem;
-   
+    font-weight:400;
+    color:var(--text-color);
+background-color:#fff;
+}
 
+.btn{
+      background-color:var(--accent-color);
+      color:#f2f2f2;
+      font-size: 2.5rem;
+      border-radius: 10px;
+   
 }
