--- a/CSS/queries.css
+++ b/CSS/queries.css
@@ -1,21 +1,37 @@
-@media (min-width:679px) {
+@media (min-width:768px) {
     .header{
-        height:45vh;
+        height:50vh;
     }
-   
+    .hero-title{
+    font-size: 6rem;
+  }
+ 
 
 @media(min-width:1200px){
     .header{
-        height:50vh;
+        height:70vh;
+        
     }
    .text-content{
       margin-left: 24rem;
     }
+      .hero-title{
+    font-size: 8rem;
+  }
+  .hero{
+    margin-bottom: 6rem;
+  }
+  .featured{
+    margin-bottom: 10rem;
+    margin-top: 5rem;
+  }
+  
    
 }
 
-@media(max-width:375px){
+@media(max-width:768px){
   
+
      
 }
 @media screen and (max-width: 992px) {
