--- a/CSS/general.css
+++ b/CSS/general.css
@@ -46,7 +46,7 @@ h1{
 
 .footer{
     background-color: var(--primary-color);
-    height:30rem;
+    height:20rem;
  
 }
 .footer-div{
@@ -69,4 +69,12 @@ h1{
 }
 
 
+.example{
+    border:2px solid grey;
+    padding:2rem;
+}
 
+.code-examples{
+    border-left:5px solid var(--accent-color);
+    padding-left:2rem;
+}
